[gd_scene load_steps=6 format=3 uid="uid://psjnbhu2tahx"]

[ext_resource type="Script" uid="uid://dnvpt4q20uprg" path="res://scenes/hud.gd" id="1_ahhtf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xosvn"]
bg_color = Color(0.971335, 0.971335, 0.971335, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.054902, 0.054902, 0.054902, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adx1n"]
bg_color = Color(0.375122, 0.689404, 0.316343, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ngyvp"]
bg_color = Color(0.470588, 0.654902, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42puf"]
bg_color = Color(0.378579, 0.667928, 0.471797, 1)
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0.537255, 0, 0, 0.6)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="Panel" type="Panel" parent="."]
offset_left = 426.0
offset_top = 150.0
offset_right = 626.0
offset_bottom = 341.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xosvn")

[node name="Label" type="Label" parent="."]
offset_left = 430.0
offset_top = 100.0
offset_right = 610.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 30
text = "下一个"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 430.0
offset_top = 398.0
offset_right = 610.0
offset_bottom = 443.0
theme_override_font_sizes/font_size = 30
text = "得分：0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 72.0
offset_top = 293.0
offset_right = 311.0
offset_bottom = 351.0
theme_override_font_sizes/font_size = 40
text = "游戏结束！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
process_mode = 3
offset_left = 430.0
offset_top = 500.0
offset_right = 610.0
offset_bottom = 540.0
focus_mode = 0
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_adx1n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ngyvp")
theme_override_styles/normal = SubResource("StyleBoxFlat_42puf")
text = "重新开始"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
